tests/errors/array_section_shape_mismatch_01.f90
program main
    integer :: a(2), temp(2), i0
    i0 = 1
    a = temp(i0:i0)
end program
